# semantic-segmentation-adaptive-manipulation

./: Dockerfile  README.md
ROS2_Packages/segmentation_panel/: CMakeLists.txt  package.xml
ROS2_Packages/segmentation_panel/include/segmentation_panel/: segmentation_control_panel.hpp
ROS2_Packages/segmentation_panel/resource/: segmentation_panel_plugin.xml
ROS2_Packages/segmentation_panel/src/: segmentation_control_panel.cpp
ROS2_Packages/xarm6_controller/include/xarm6_controller/: xarm6_controller.hpp
ROS2_Packages/xarm6_controller/src/: main.cpp  xarm6_controller.cpp
ROS2_Packages/xarm6_controller/srv/: ProcessObject.srv
ROS2_Packages/xarm6_controller/xarm6_controller/: CMakeLists.txt  package.xml
ROS2_Packages/xarm6_controller/xarm6_controller/config/: params.yaml
ROS2_Packages/xarm6_controller/xarm6_controller/launch/: xarm6_controller_launch.py
ROS2_Packages/zed_vision/: package.xml  setup.cfg  setup.py
ROS2_Packages/zed_vision/config/: botsort.yaml  params.yaml
ROS2_Packages/zed_vision/launch/: zed_vision_launch.py
ROS2_Packages/zed_vision/resource/models/: README_resources.txt
ROS2_Packages/zed_vision/zed_vision/: yolo_zed_vision_node.py
Report_scripts/: get_frame_from_normal.ggb  svdsample.py
