<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>segmentation_panel</name>
  <version>0.0.0</version>
  <description>Custom RViz2 panel for segmented object interaction and process control with xArm6 via ROS 2 topics and services</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rviz_common</depend>
  <depend>pluginlib</depend>
  <depend>Qt5</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>xarm6_controller</depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rviz_common plugin="${prefix}/resource/segmentation_panel_plugin.xml"/>
  </export>
</package>
